<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">StreamingTester</string>
	<string name="action_ok">OK</string>
	<string name="enable_background_audio">Play in background</string>
	<string name="video">Video</string>
	<string name="audio">Audio</string>
	<string name="text">Text</string>
	<string name="logging">Logging</string>
	<string name="logging_normal">Normal</string>
	<string name="logging_verbose">Verbose</string>
	<string name="retry">Retry</string>
	<string name="off">[off]</string>
	<string name="on">[on]</string>
	<string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
	<string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
	<string name="drm_error_unknown">An unknown DRM error occurred</string>
	<string name="failed">Playback failed</string>
	<string name="menu_entry_show_media_info_dialog">Show media info</string>
	<string name="menu_item_clear_battery_log">Remove battery log file</string>
	<string name="menu_item_open_local_video_file">Open file from local disk</string>
	<string name="menu_item_loop_mode">Enable loop mode</string>
	<string name="info_battery_log_file_removed_successfully">Battery log file removed!</string>
	<string name="err_problem_with_removing_battery_log_file">There is a problem with removing battery log file!</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_cpu_monitoring_enabled">CPU monitoring enabled</string>
	<string name="title_activity_samples_list">SamplesListActivity</string>
	<string name="action_settings">Settings</string>
	<string name="pref_delete_battery_log">Remove battery log file</string>
	<string name="media_server_address">Media server IP address</string>
	<string name="media_server_port">Media server TCP port</string>
	<string name="pref_initialize_database">Initialize database</string>
	<string name="info_operation_not_supported_yet">Operation not supported yet</string>
	<string name="pref_test_type" translatable="false">pref_test_type</string>
	<string name="pref_media_server_address" translatable="false">pref_media_server_ip_address</string>
	<string name="pref_media_server_port" translatable="false">pref_media_server_tcp_port</string>
	<string name="pref_default_media_server_address" translatable="false">10.0.0.2</string>
	<string name="pref_default_media_server_port" translatable="false">8081</string>
	<string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
	<string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
	<string name="error_drm_unknown">An unknown DRM error occurred</string>
	<string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
	<string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
	<string name="error_querying_decoders">Unable to query device decoders</string>
	<string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
	<string name="storage_permission_denied">Permission to access storage was denied</string>
</resources>
